style: Fiz a responsividade para o login e alguns ajustes na home page.

--- a/static/css/base/footer.css
+++ b/static/css/base/footer.css
@@ -62,3 +62,13 @@ footer > div:nth-child(2) > section:nth-child(3) img {
 footer > div:nth-child(2) > section:nth-child(3) img:hover {
     color: var(--amarelo);
 }
+
+@media (max-width: 768px) {
+    footer > div:first-child {
+        flex-direction: column;
+    }
+
+    footer > div:last-child {
+        flex-direction: column-reverse;
+    }
+}
