--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,10 @@
     <!-- Aqui está o banner com a imagem logo abaixo do cabeçalho -->
     <article class="banner"> 
         <div>
-            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit nesciunt unde deserunt necessitatibus dolore quo repellat error eum, non soluta molestias nulla? Est expedita eligendi eaque maxime enim quas dolorum soluta nam nemo, placeat consectetur velit odit doloremque quos impedit vitae id perspiciatis quia beatae dicta reprehenderit ab veniam tenetur.</p>
+            <h1>Sua Visão, Nosso Compromisso!</h1>
+            <p>
+                Na Clínica Vision, sua saúde visual é nossa prioridade. Com uma equipe especializada e atendimento humanizado, oferecemos soluções eficazes e personalizadas para cuidar da sua visão com excelência e empatia. Venha nos conhecer e veja a diferença!
+            </p>
         </div>
         <img src="{% static "img/home/banner.svg" %}"
             alt="Foto de um médico fazendo exame oftalmológico com um aparelho em uma paciente.">
