--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -7,6 +7,7 @@ Login | {{ block.super }}
 {% endblock title %}
 
 {% block head %}
+<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0">
 		<link rel="stylesheet" href="{% static "css/login/login.css" %}">
 		<link rel="stylesheet" href="{% static "css/formulario/form.css" %}">
 		<link rel="stylesheet" href="{% static "scss/button-submit.scss" %}">
@@ -56,18 +57,18 @@ Login | {{ block.super }}
 								{% comment %} <span class="titulo__padrao">Ou</span> {% endcomment %}
 								<form class="form-horizontal" method="post">
 										{% csrf_token %}
-												<div class="form-group {% if form.username.errors %} has-error {% endif %}">
+												<div {% if form.username.errors %} has-error {% endif %}">
 														<label for="{{form.username.auto_id }}" class="col-md-3 control-label">
 																{{ form.username.label_tag }}
 														</label>
 														<div class="col-md-9">
-																{% render_field form.username class='form-control' placeholder='Usuário'%}
+																{% render_field form.username class='form-control' placeholder='Usuário ou e-mail'%}
 																{% for error in form.username.errors %}
 																<span class='help-block'>{{error}}</span>
 																{%endfor%}
 														</div>
 												</div>
-												<div class="form-group {% if form.password.errors %} has-error {% endif %}">
+												<div {% if form.password.errors %} has-error {% endif %}">
 														<label for="{{ form.password.auto_id }}id_email" class="col-md-3 control-label">
 																{{ form.password.label }}
 														</label>
@@ -78,7 +79,7 @@ Login | {{ block.super }}
 																{% endfor %}
 														</div>
 												</div>
-												<div class="form-group">
+												<div>
 														<div class="col-md-9 col-md-offset-3">
 																<button type="submit" id="button-submit" class="form-button">ENTRAR</button>
 														</div>
