--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %} Clinica Vision {% endblock %}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=10, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />  <!-- Outros elementos do head, como meta tags, título, etc. -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}"media="screen" />
