--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <body>
   {% block header %}
     <div class="nav navbar navbar-default navbar-fixed-top">
-      <div class="container">
+      <div>
         <div class="navbar-header">
           <a href="{% url 'home'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
