--- a/accounts/templates/accounts/update_password.html
+++ b/accounts/templates/accounts/update_password.html
@@ -14,7 +14,7 @@
   <div>
     <h1 class="titulo">Alterar Senha</h1>
   </div>
-  <form class="form-horizontal" action="" method="post">
+  <form action="" method="post">
       {% csrf_token %}
       <fieldset>
           {% for field in form %}
