--- a/accounts/templates/accounts/update_user.html
+++ b/accounts/templates/accounts/update_user.html
@@ -16,7 +16,7 @@
   <div>
     <h1 class="titulo">Alterar Dados</h1>
   </div>
-  <form class="form-horizontal" action="" method="post">
+  <form action="" method="post">
       {% csrf_token %}
       <fieldset>
           {% for field in form %}
