--- a/clientes/templates/clientes/cadastro.html
+++ b/clientes/templates/clientes/cadastro.html
@@ -18,7 +18,7 @@
         <div class="page-header">
             <h1 class="titulo">Agendar Consulta</h1>
         </div>
-        <form class="form-horizontal" method="post">
+        <form method="post">
             {% csrf_token %}
             {% for error in form.non_field_errors %}
             <div class="alert alert-danger">
@@ -45,7 +45,7 @@
                 </div>
             </fieldset>
         </form>
-        <div class="container margin-top">
+        {% comment %} <div class="container margin-top">
             {% block messages %}
                 {% for message in messages %}
                     <div class='alert alert-{{ message.tags}}'>
@@ -53,7 +53,7 @@
                     </div>
                 {% endfor %}
             {% endblock messages %}
-        </div>
+        </div> {% endcomment %}
         {% comment %} <script type="text/javascript">
         $(document).ready(function() {
             $("#id_especialidade").change(function() {
