--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -19,7 +19,7 @@
         <div class="page-header">
             <h1>Cadastro Cliente</h1>
         </div>
-        <form class="form-horizontal login" method="post">
+        <form class="form_cadastro" login" method="post">
             {% csrf_token %}
             {% for error in form.non_field_errors %}
             <div class="alert alert-danger">
